# micro_mon

./: 18b20.cpp  CMakeLists.txt  How to build.txt  RP2040-Zero_led.c  RP2040-Zero_led.h  adc.c  com.sh  core1.c  dev env setup notes.txt  main.c  micro_mon.h  mslog.py  one_wire.cpp  one_wire.h  one_wire_18b20.cpp  pi4 dev env setup notest.txt  pzem.c  sensor_remote.h  tcp_server.c  wifi_scan.c  windows dev setup.txt
docs/: README.md  dev env setup notes.txt  windows dev setup.txt
